springboot整合dubbo成功并可以测试

--- a/imall-user-web/src/main/resources/application.properties
+++ b/imall-user-web/src/main/resources/application.properties
@@ -1,23 +1,22 @@
 # \u670D\u52A1\u7AEF\u53E3
-server.port=8080
+server.port=9002
 
 # \u65E5\u5FD7\u7EA7\u522B
 # \u9ED8\u8BA4\u65E5\u5FD7\u7EA7\u522B
 logging.level.root=info
 
+# \u9879\u76EE\u540D\u79F0
+spring.application.name=imall-user-web
+
 # dubbo\u7684\u914D\u7F6E
 # dubbo\u4E2D\u7684\u670D\u52A1\u540D\u79F0
-spring.dubbo.application=user-web
+dubbo.application.name=user-web
 # dubbo\u7684\u901A\u8BAF\u534F\u8BAE\u540D\u79F0
-spring.dubbo.protocol.name=dubbo
 # zookeeper\u6CE8\u518C\u4E2D\u5FC3\u7684\u5730\u5740
-spring.dubbo.registry.address=106.14.124.124:2181
-# zookeeper\u7684\u901A\u8BAF\u534F\u8BAE\u7684\u540D\u79F0
-spring.dubbo.registry.protocol=zookeeper
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 # dubbo\u7684\u670D\u52A1\u7684\u626B\u63CF\u8DEF\u5F84
-spring.dubbo.base-package=com.ivan.imall
+dubbo.scan.base-packages=com.ivan.imall
 # \u8BBE\u7F6E\u8D85\u65F6\u65F6\u95F4
-spring.dubbo.consumer.timeout=600000
+dubbo.consumer.timeout=60000
 # \u8BBE\u7F6E\u662F\u5426\u68C0\u67E5\u670D\u52A1\u5B58\u5728
-spring.dubbo.consumer.check=false
-
+dubbo.consumer.check=false
