--- a/imall-parent/pom.xml
+++ b/imall-parent/pom.xml
@@ -23,7 +23,7 @@
         <java.version>1.8</java.version>
 
         <fastjson.version>1.2.46</fastjson.version>
-        <dubbo-starter.version>2.0.0</dubbo-starter.version>
+        <dubbo-starter.version>0.2.0</dubbo-starter.version>
         <zkclient.version>0.10</zkclient.version>
         <mybatis.version>1.3.1</mybatis.version>
         <nekohtml.version>1.9.20</nekohtml.version>
@@ -49,7 +49,7 @@
             </dependency>
 
             <dependency>
-                <groupId>com.alibaba.spring.boot</groupId>
+                <groupId>com.alibaba.boot</groupId>
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>${dubbo-starter.version}</version>
             </dependency>
